--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="main">
         <div class="left-side">
           <figure>
-              <img src = "https://raw.githubusercontent.com/eddie-an/pictures-for-html/main/physique.jpg"
+              <img src = "./Selfie.jpg"
               alt = "The image cannot be loaded" 
               width = "300"
               height = "300">
@@ -64,7 +64,7 @@
                 </td>
                 <td>
                   <input type="checkbox" id="fact4" name="GPA" checked>
-                  <label for="fact4">I finished first year fall term with a 4.0 GPA</label>
+                  <label for="fact4">I got a 4.0 GPA in first year fall term</label>
                 </td>
               </tr>
               <tr>
@@ -74,7 +74,7 @@
                 </td>
                 <td>
                   <input type="checkbox" id="fact6" name="shirt" checked>
-                  <label for="fact6">I own a shirt that says "I &hearts; MILFs"</label>
+                  <label for="fact6">This is my first web development project</label>
                 </td>
               </tr>
               <tr>
