--- a/interests.html
+++ b/interests.html
@@ -29,7 +29,7 @@
         <div class="main">
             <div class="left-side">
                 <figure>
-                    <img src = "https://raw.githubusercontent.com/eddie-an/pictures-for-html/main/physique.jpg"
+                    <img src = "./Selfie.jpg"
                     alt = "The image cannot be loaded" 
                     width = "300"
                     height = "300">
